--- a/in2.html
+++ b/in2.html
@@ -1401,7 +1401,7 @@
 
       <div class="copyright text-center py-3">
         <p>© 2011 - 2024 All rights reserved. Linkage Tours and Travels Pvt Ltd. Developed By: <strong>HaruTech Nepal</strong>.</p>
-      </div>
+    GHEllo      </div>
 
     </section>
 
